# dockflow

./: README.md  docker-bake.hcl  docker-compose.test.yml  run_tests.py
.kiro/specs/docker-gitops-controller/: design.md  requirements.md  tasks.md
backend/: Dockerfile  Dockerfile.dev  Dockerfile.test  app.py  pyproject.toml
backend/app/: __init__.py
backend/app/controllers/: applications.py  health.py
backend/app/models/: application.py
backend/app/services/: docker_service.py
tests/: test_poc_deployment.py
