[project]
name = "DockFlow"
version = "0.1.0"
description = "A tool for automating build and deployment on docker"
authors = [
    { name = "Guilhem CHALARD PERENNOU", email = "guilhem@dockflow.io" }
]
dependencies = [
    "Flask==3.0.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate==4.0.5",
    "Flask-CORS==4.0.0",
    "psycopg2-binary==2.9.9",
    "requests==2.31.0",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
    "pytest-flask==1.3.0",
]